--- a/src/assets/styles/2-tools/_external-dependencies.scss
+++ b/src/assets/styles/2-tools/_external-dependencies.scss
@@ -1,8 +1,9 @@
+/*======= #EXTERNAL DEPENDENCIES IMPORTS =======*/
+
 /**
  * Import npm dependencies
  * @import "@some-company/some-node-module";
  * see: https://v2.parceljs.org/features/module-resolution/
- * see commented examples below
  */
 
 // Import FontAwesome;
