--- a/src/assets/styles/6-components/_footer.scss
+++ b/src/assets/styles/6-components/_footer.scss
@@ -1,5 +1,6 @@
-.uoc-footer {
-  margin-top: 1.5rem;
-  font-size: 0.75rem;
+.footer {
+  background-color: #1e254a;
+  color: white;
+  padding: 20px;
   text-align: center;
 }
