--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -44,8 +44,8 @@
  */
 
 @import "6-components/footer";
-@import "6-components/logo";
-@import "6-components/title";
+@import "6-components/header-nav";
+@import "6-components/section";
 
 /**
  * Import utilities (utility classes like states, text-center, text-right, text-left)
