--- a/src/assets/styles/3-generic/_box-sizing.scss
+++ b/src/assets/styles/3-generic/_box-sizing.scss
@@ -1,13 +1,7 @@
 /**
-* BOX-SIZING RESET CONFIGURATION
+* Box-sizing configuration
 */
 
 * {
   box-sizing: border-box;
-}
-
-*,
-*::before,
-*::after {
-  box-sizing: inherit;
 }
