--- a/src/assets/styles/4-elements/_elements.scss
+++ b/src/assets/styles/4-elements/_elements.scss
@@ -1,12 +1,41 @@
+/**
+* Style specific html tags
+*/
+
 body {
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-  margin: 0;
-  padding: 2rem;
-  font-family: $font-family-sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  background-color: $uoc-bg;
-  color: $uoc-corporate;
+  color: $brand-primary-color;
+  font-family: $primary-font;
+  background-color: $body-color;
+}
+
+header {
+  /* Positioning */
+  position: fixed;
+  top: 0;
+  left: 0;
+
+  /* Box model */
+  width: 100%;
+
+  /* Typography */
+
+  /* Visual */
+
+  /* Other */
+  z-index: $z-fixed;
+
+  .header__shadow {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(
+      180deg,
+      hsla(0, 0%, 0%, 0) 50%,
+      $brand-primary-color 500%
+    );
+    z-index: 0;
+    pointer-events: none; //Permite acceder a los elementos del header
+  }
 }
