PEC1 v0.0.3 - Actualizacion breakpoints

--- a/src/assets/styles/1-settings/_theme.scss
+++ b/src/assets/styles/1-settings/_theme.scss
@@ -31,4 +31,4 @@ $gradient-card: linear-gradient(
 
 /*======= #LINK COLORS =======*/
 
-/*======= #FOCUS COLORS =======*/
+/*======= #FOCUS AND HOVER COLORS =======*/
