--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -43,6 +43,7 @@
  * Import components (layout components like teaser, navigation, header, footer)
  */
 
+@import "6-components/fontawesome-icon";
 @import "6-components/footer";
 @import "6-components/header-nav";
 @import "6-components/section";
