--- a/src/assets/styles/1-settings/_properties.scss
+++ b/src/assets/styles/1-settings/_properties.scss
@@ -13,9 +13,10 @@ $breakpoints: (
   laptop: 1200px,
   // 992px - 1200px
   tablet: 991px,
-  // 768px -  991px
-  mobile: 767px,
-  //   0px -  767px
+  // 768px - 991px
+  mobile-vertical: 767px,
+  // 0px - 767px
+  mobile-horizontal: 450px,
 );
 
 /*======= #POSITIONING PROPERTIES =======*/
