--- a/src/assets/styles/1-settings/_typography.scss
+++ b/src/assets/styles/1-settings/_typography.scss
@@ -30,7 +30,8 @@ $h2-font-size: 1.25rem;
 $big-font-size: 1.1rem;
 $h3-font-size: 1rem;
 $normal-font-size: 0.95rem;
-$small-font-size: 0.8rem;
+$small-font-size: 0.85rem;
+$smallest-font-size: 0.8rem;
 
 /** #FONT WEIGHT **/
 $font-bold: bold;
