--- a/src/assets/styles/6-components/_header-nav.scss
+++ b/src/assets/styles/6-components/_header-nav.scss
@@ -1,3 +1,4 @@
+/*======= #BLOCK =======*/
 .header-nav {
   /* Positioning */
 
@@ -16,6 +17,7 @@
   box-shadow: 0px 0.1px 5px $brand-primary-color;
 }
 
+/*======= #ELEMENTS =======*/
 .header-nav__logo {
   width: calc(5vw + 120px);
 
@@ -39,7 +41,7 @@
     right: 0;
 
     padding-left: 10px;
-    width: 80%;
+    width: 100%;
     height: 100%;
 
     background-color: $menu-color;
@@ -67,7 +69,7 @@
 }
 
 .header-nav__item {
-  padding-inline: calc(10vw - 80px);
+  padding-inline: calc(8vw - 52px);
 }
 
 .header-nav__link-content {
@@ -88,6 +90,10 @@
 
   &:hover {
     color: $first-color;
+  }
+
+  @media screen and (min-width: 767px) and (max-width: 900) {
+    font-size: $h3-font-size;
   }
 }
 
@@ -145,12 +151,4 @@
   @media screen and (min-width: 767px) {
     display: none;
   }
-}
-
-/**
-* Ajusta el ancho de los iconos para evitar desplazamientos indeseados 
-* de otros elementos al cambiar su orientacion 
-*/
-.fa-solid {
-  width: 14px;
 }
