--- a/src/assets/styles/6-components/_section.scss
+++ b/src/assets/styles/6-components/_section.scss
@@ -1,18 +1,19 @@
-/*======= #BLOQUE =======*/
+/*======= #BLOCK =======*/
 .section {
   position: relative;
-  min-height: 750px;
+  min-height: calc(250px + 33vw);
 }
 
-/*======= #ELEMENTOS =======*/
+/*======= #ELEMENTS =======*/
 .section__background {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
-  height: 750px;
+  height: calc(250px + 33vw);
   object-fit: cover;
   object-position: center;
+  z-index: -2;
 }
 
 .section__shadow {
@@ -20,15 +21,17 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 800px;
-  background: linear-gradient(180deg, hsla(0, 0%, 0%, 0) 90%, $body-color 94%),
-    linear-gradient(0deg, hsla(0, 0%, 0%, 0) 95%, $body-color 100%);
+  height: calc(250px + 33vw);
+  background: linear-gradient(180deg, hsla(0, 0%, 0%, 0) 95%, $body-color 100%),
+    linear-gradient(0deg, hsla(0, 0%, 0%, 0) 94%, $body-color 100%);
+
+  z-index: -1;
 }
 
 .section__container {
   position: relative;
-  padding-top: 5rem;
-  row-gap: 3rem;
+  padding-top: calc(60px + 4vw);
+  row-gap: 2rem;
 }
 
 .section__data {
@@ -37,7 +40,7 @@
 
 .section__subtitle {
   margin-bottom: 0.8rem;
-  font-size: $h3-font-size;
+  font-size: $h2-font-size;
 }
 
 .section__title {
@@ -46,7 +49,6 @@
 }
 
 .section__description {
-  margin-bottom: 2rem;
   font-size: $normal-font-size;
   font-weight: $font-small-bold;
 }
@@ -59,6 +61,7 @@
 .section__card {
   position: relative;
   overflow: hidden;
+  cursor: pointer;
 
   //box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 2px rgba(0, 0, 0, 0.24);
   box-shadow: 0px 1px 5px $brand-primary-color, 0px 1px 5px $brand-primary-color;
@@ -94,15 +97,49 @@
   z-index: 1;
 }
 
-/*======= #MODIFICADORES =======*/
-.section__background--opacity-home {
+.section__video {
+  position: relative;
+  justify-self: center;
+  overflow: hidden;
+}
+
+/*======= #MODS =======*/
+.section__background--opacity-008 {
   opacity: 0.08;
 }
 
-.section__background--opacity-history {
+.section__background--opacity-006 {
   opacity: 0.06;
 }
 
-.section__background--opacity-patrimony {
+.section__background--opacity-004 {
   opacity: 0.04;
+}
+
+.section__cards--grid {
+  @media screen and (min-width: 600px) {
+    grid-template-columns: repeat(2, 240px);
+  }
+}
+
+.section__cards--grid-dos {
+  justify-content: center;
+
+  @media screen and (min-width: 600px) {
+    grid-template-columns: repeat(auto-fit, minmax(170px, 1fr));
+  }
+}
+
+.section__container--grid {
+  @media screen and (min-width: 600px) {
+    align-items: center;
+    grid-template-columns: 2fr 3fr;
+  }
+}
+
+.section__data--left,
+.section__title--left {
+  @media screen and (min-width: 600px) {
+    text-align: initial;
+  }
 }
