--- a/src/assets/styles/4-elements/_elements.scss
+++ b/src/assets/styles/4-elements/_elements.scss
@@ -3,9 +3,9 @@
 */
 
 body {
-  color: $brand-primary-color;
   font-family: $primary-font;
-  background-color: $body-color;
+  color: $color-primary;
+  background-color: $color-body;
 }
 
 header {
@@ -13,6 +13,7 @@ header {
   position: fixed;
   top: 0;
   left: 0;
+  z-index: $z-fixed;
 
   /* Box model */
   width: 100%;
@@ -22,20 +23,15 @@ header {
   /* Visual */
 
   /* Other */
-  z-index: $z-fixed;
 
   .header__shadow {
     position: absolute;
     top: 0;
     left: 0;
+    z-index: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(
-      180deg,
-      hsla(0, 0%, 0%, 0) 50%,
-      $brand-primary-color 500%
-    );
-    z-index: 0;
     pointer-events: none; //Permite acceder a los elementos del header
+    background: $gradient-header-shadow;
   }
 }
