--- a/src/assets/styles/6-components/_header-nav.scss
+++ b/src/assets/styles/6-components/_header-nav.scss
@@ -4,17 +4,16 @@
 
   /* Box model */
   display: flex;
-  justify-content: space-between;
   align-items: center;
+  justify-content: space-between;
   padding-block: calc(0.1vw + 8px);
-  //height: $headerNavHeight;
 
   /* Typography */
   font-size: $big-font-size;
 
   /* Visual */
-  background-color: $container-color;
-  box-shadow: 0px 0.1px 5px $brand-primary-color;
+  background-color: $color-header-container;
+  box-shadow: $shadow-header;
 }
 
 /*======= #ELEMENTS =======*/
@@ -39,15 +38,15 @@
     position: fixed;
     top: -100%;
     right: 0;
+    z-index: $z-fixed;
 
-    padding-left: 10px;
     width: 100%;
     height: 100%;
-
-    background-color: $menu-color;
-
-    z-index: $z-fixed;
+    padding-left: 10px;
     overflow-y: auto; //Si el contenido excede la altura permite realizar scroll del menu en lugar de la web
+
+    background-color: $color-header-menu;
+
     transition: top 0.3s ease;
 
     &.js-show-menu {
@@ -84,12 +83,12 @@
 }
 
 .header-nav__link {
-  color: $brand-primary-color;
   font-weight: $font-semi-bold;
+  color: $color-primary;
   transition: color 0.3s;
 
   &:hover {
-    color: $first-color;
+    color: $color-hover-header-link;
   }
 
   @media screen and (min-width: 767px) and (max-width: 900) {
@@ -101,13 +100,13 @@
 * Oculta la lista anidada por defecto 
 */
 .header-nav__sublist {
-  display: none;
   position: absolute;
-  max-width: max-content;
-  background-color: #f9f9f9;
-  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.2);
-  padding: 12px 16px;
   z-index: 1;
+  display: none;
+  max-width: max-content;
+  padding: 12px 16px;
+  background-color: $color-header-sublist;
+  box-shadow: $shadow-header-sublist;
 
   &.js-show-sublist {
     display: block;
@@ -119,12 +118,12 @@
 }
 
 .header-nav__sublink {
-  color: $brand-primary-color;
   font-weight: $font-small-bold;
+  color: $color-primary;
   transition: color 0.3s;
 
   &:hover {
-    color: $first-color;
+    color: $color-hover-header-link;
   }
 }
 
