PEC1 v0.0.5 - Validacion HTML

--- a/src/views/footer.html
+++ b/src/views/footer.html
@@ -1,3 +1,79 @@
-<footer class="uoc-footer">
-    &copy; Universitat Oberta de Catalunya
+<footer class="footer">
+    <div class="footer__container o-container o-grid">
+        <div class="footer__content o-grid">
+            <div class="footer__brand">
+                <a class="footer__logo" href="#">EdimburGo!</a>
+                <p class="footer__description">
+                    Visítenos y explore Edimburgo sin límites.
+                </p>
+            </div>
+
+            <div class="footer__data o-grid">
+                <div class="footer__data-colum">
+                    <h3 class="footer__title">Quiénes somos</h3>
+
+                    <ul class="footer__links">
+                        <li>
+                            <a class="footer__link" href="#">Quiénes somos</a>
+                        </li>
+                        <li>
+                            <a class="footer__link" href="#">Aviso legal</a>
+                        </li>
+                        <li>
+                            <a class="footer__link" href="#">Privacidad</a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="footer__data-colum">
+                    <h3 class="footer__title">Contactar</h3>
+
+                    <ul class="footer__links">
+                        <li>
+                            <a class="footer__link" href="#"
+                                >Centro de soporte</a
+                            >
+                        </li>
+                        <li>
+                            <a class="footer__link" href="#">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div class="footer__group o-grid">
+            <div class="footer__social o-grid">
+                <a
+                    class="footer__social-link"
+                    href="https://www.facebook.com/"
+                    target="_blank"
+                    ><i class="fa-brands fa-facebook-f"></i
+                ></a>
+                <a
+                    class="footer__social-link"
+                    href="https://www.instagram.com/"
+                    target="_blank"
+                    ><i class="fa-brands fa-instagram"></i
+                ></a>
+                <a
+                    class="footer__social-link"
+                    href="https://twitter.com/"
+                    target="_blank"
+                    ><i class="fa-brands fa-x-twitter"></i
+                ></a>
+                <a
+                    class="footer__social-link"
+                    href="https://www.youtube.com/"
+                    target="_blank"
+                    ><i class="fa-brands fa-youtube"></i
+                ></a>
+            </div>
+
+            <div class="footer__copy">
+                <p>&copy; UOC</p>
+                <p>Diseñado por jmazuelos</p>
+            </div>
+        </div>
+    </div>
 </footer>
