--- a/src/assets/styles/6-components/_section.scss
+++ b/src/assets/styles/6-components/_section.scss
@@ -94,6 +94,7 @@
   position: relative;
   justify-self: center;
   overflow: hidden;
+  max-width: -webkit-fill-available; //Evita que el video sobresalga de la seccion (responsive)
 }
 
 /*======= #MODS =======*/
