PEC1 v0.0.9 - optimización accesibilidad

--- a/src/views/footer.html
+++ b/src/views/footer.html
@@ -47,24 +47,28 @@
                 <a
                     class="footer__social-link"
                     href="https://www.facebook.com/"
+                    aria-label="Facebook"
                     target="_blank"
                     ><i class="fa-brands fa-facebook-f"></i
                 ></a>
                 <a
                     class="footer__social-link"
                     href="https://www.instagram.com/"
+                    aria-label="Instagram"
                     target="_blank"
                     ><i class="fa-brands fa-instagram"></i
                 ></a>
                 <a
                     class="footer__social-link"
                     href="https://twitter.com/"
+                    aria-label="X-Twitter"
                     target="_blank"
                     ><i class="fa-brands fa-x-twitter"></i
                 ></a>
                 <a
                     class="footer__social-link"
                     href="https://www.youtube.com/"
+                    aria-label="Youtube"
                     target="_blank"
                     ><i class="fa-brands fa-youtube"></i
                 ></a>
