PEC1 v0.1.0 - Optimización de imagenes

--- a/src/views/header.html
+++ b/src/views/header.html
@@ -10,6 +10,8 @@
                     id="header-nav-img"
                     src="/src/assets/images/global/logo/extended-logo.svg"
                     alt="Logo"
+                    width="200"
+                    height="50"
                 />
             </picture>
         </a>
