PEC1 v0.1.3 - Funciones SASS

--- a/src/assets/styles/2-tools/_functions.scss
+++ b/src/assets/styles/2-tools/_functions.scss
@@ -1,3 +1,11 @@
 /**
 * Function tools
 */
+
+@function pxToRem($px) {
+  @return #{$px / $font-base-size}rem;
+}
+
+@function remToPx($rem) {
+  @return #{$rem * $font-base-size}px;
+}
