--- a/src/assets/styles/1-settings/_typography.scss
+++ b/src/assets/styles/1-settings/_typography.scss
@@ -37,3 +37,6 @@ $smallest-font-size: 0.8rem;
 $font-bold: bold;
 $font-semi-bold: 700;
 $font-small-bold: 500;
+
+/** #OTHERS **/
+$font-base-size: 16;
