--- a/src/assets/styles/6-components/_footer.scss
+++ b/src/assets/styles/6-components/_footer.scss
@@ -1,6 +1,7 @@
 /*======= #BLOCK =======*/
 .footer {
   padding-block: 2rem;
+  margin-top: 30px;
   color: $color-footer-set;
   text-align: center;
   background-color: $color-primary;
@@ -41,12 +42,7 @@
 .footer__link {
   font-size: $small-font-size;
   color: $color-footer-set;
-  //font-weight: $font-small-bold;
-  transition: color 0.3s;
-
-  &:hover {
-    color: $color-hover-footer-link;
-  }
+  @include hover-link-transition($color-hover-footer-link);
 }
 
 .footer__social {
@@ -58,9 +54,9 @@
 
 .footer__social-link {
   font-size: $h1-font-size;
-  transition: transform 0.4s;
+  @include transition(transform 0.4s);
 
   &:hover {
-    transform: translateY(-0.25rem);
+    @include transform(translateY(-0.25rem));
   }
 }
