--- a/src/assets/styles/6-components/_header-nav.scss
+++ b/src/assets/styles/6-components/_header-nav.scss
@@ -20,7 +20,7 @@
 .header-nav__logo {
   width: calc(5vw + 120px);
 
-  transition: width 0.3s ease-in-out;
+  @include transition(width 0.3s ease-in-out);
 
   &.js-sticky-menu {
     @media screen and (min-width: 767px) {
@@ -47,7 +47,7 @@
 
     background-color: $color-header-menu;
 
-    transition: top 0.3s ease;
+    @include transition(top 0.3s ease);
 
     &.js-show-menu {
       top: 0;
@@ -85,13 +85,9 @@
 .header-nav__link {
   font-weight: $font-semi-bold;
   color: $color-primary;
-  transition: color 0.3s;
+  @include hover-link-transition($color-hover-header-link);
 
-  &:hover {
-    color: $color-hover-header-link;
-  }
-
-  @media screen and (min-width: 767px) and (max-width: 900) {
+  @media screen and (min-width: 767px) and (max-width: 900px) {
     font-size: $h3-font-size;
   }
 }
@@ -120,11 +116,7 @@
 .header-nav__sublink {
   font-weight: $font-small-bold;
   color: $color-primary;
-  transition: color 0.3s;
-
-  &:hover {
-    color: $color-hover-header-link;
-  }
+  @include hover-link-transition($color-hover-header-link);
 }
 
 .header-nav__subitem {
