PEC1 v0.1.4 - mejora de rendimiento eliminando funciones

--- a/src/assets/styles/2-tools/_functions.scss
+++ b/src/assets/styles/2-tools/_functions.scss
@@ -2,6 +2,8 @@
 * Function tools
 */
 
+//Se comenta para mejorar el rendimiento ya que no se usan, simplemente muestra algunos ejemplos de funciones
+/*
 @function pxToRem($px) {
   @return #{$px / $font-base-size}rem;
 }
@@ -9,3 +11,4 @@
 @function remToPx($rem) {
   @return #{$rem * $font-base-size}px;
 }
+*/
