PEC1 v0.1.5 - Mejora de rendimiento comentando mixins

--- a/src/assets/styles/2-tools/_functions.scss
+++ b/src/assets/styles/2-tools/_functions.scss
@@ -2,7 +2,7 @@
 * Function tools
 */
 
-//Se comenta para mejorar el rendimiento ya que no se usan, simplemente muestra algunos ejemplos de funciones
+//Se comenta por pruebas de rendimiento, muestra ejemplos de funciones
 /*
 @function pxToRem($px) {
   @return #{$px / $font-base-size}rem;
