--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -16,7 +16,7 @@
  */
 
 @import "2-tools/external-dependencies";
-@import "2-tools/functions";
+/*@import "2-tools/functions";*/
 @import "2-tools/mixins";
 
 /**
